[metadata]
description-file = README.md

[flake8]
accept-encodings = utf-8
exclude = .git,__pycache__,build,dist,.env,.venv,venv
max-line-length = 160
# E501 Line too long
# E123 closing bracket does not match indentation of opening bracket's line
ignore = E501,E123
per-file-ignores =
    # E741 do not use variables named ‘l’, ‘O’, or ‘I’
    subject.py: E741
    # T001 print found
    # S102 Use of exec detected
    setup.py: T001, S102
